BERT-deepset: inference-2

--- a/BERT-deepset/bert-deepset_haystack_inference.ipynb
+++ b/BERT-deepset/bert-deepset_haystack_inference.ipynb
@@ -106,8 +106,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1339a46c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Eiffel Tower is located in Paris', 0.3274986147880554),\n",
+       " ('Python', 0.30877768993377686),\n",
+       " ('programming language', 0.2751408815383911),\n",
+       " ('popular', 0.2337816208600998),\n",
+       " ('a', 0.20744463801383972),\n",
+       " (None, 0.204619354596871)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"Where is the Eiffel Tower located?\"\n",
+    "result = reader.run(query=question, documents=docs)\n",
+    "[(r.data, r.score) for r in result[\"answers\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2ba3b2",
    "metadata": {},
    "outputs": [],
    "source": []
