--- a/SegFormer/segformer-clothes_huggingface_inference.ipynb
+++ b/SegFormer/segformer-clothes_huggingface_inference.ipynb
@@ -14,6 +14,49 @@
     "\n",
     "![SegFormer](../assets/segformer_overview.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "968d9cc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/py311/lib/python3.11/site-packages/transformers/utils/deprecation.py:172: UserWarning: The following named arguments are not valid for `SegformerImageProcessor.__init__` and were ignored: 'feature_extractor_type'\n",
+      "  return func(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from transformers import SegformerImageProcessor\n",
+    "from transformers import AutoModelForSemanticSegmentation\n",
+    "\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "processor = SegformerImageProcessor.from_pretrained(\n",
+    "    \"mattmdjaga/segformer_b2_clothes\"\n",
+    ")\n",
+    "model = AutoModelForSemanticSegmentation.from_pretrained(\n",
+    "    \"mattmdjaga/segformer_b2_clothes\"\n",
+    ")\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f1414d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -23,7 +66,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.11"
   }
  },
