BiRefNet/HR-Matting: installation

--- a/BiRefNet/birefnet-hr-matting_huggingface_inference.ipynb
+++ b/BiRefNet/birefnet-hr-matting_huggingface_inference.ipynb
@@ -16,14 +16,19 @@
     "\n",
     "![BiRefNet Pipeline](../assets/birefnet_pipeline.png)\n",
     "\n",
-    "![BiRefNet Pipeline](../assets/birefnet_block.png)"
+    "![BiRefNet Pipeline](../assets/birefnet_block.png)\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "conda create -n birefnet python=3.10 -y\n",
+    "conda activate birefnet\n",
+    "\n",
+    "pip install -r https://raw.githubusercontent.com/ZhengPeng7/BiRefNet/main/requirements.txt\n",
+    "\n",
+    "pip install transformers\n",
+    "pip install matplotlib\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c689d61e",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -33,7 +38,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
