--- a/Mask2Former/mask2former_huggingface_inference.ipynb
+++ b/Mask2Former/mask2former_huggingface_inference.ipynb
@@ -16,9 +16,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "48d23f79",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2c6616df",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/birefnet/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "/home/pyml/anaconda3/envs/birefnet/lib/python3.10/site-packages/transformers/utils/deprecation.py:172: UserWarning: The following named arguments are not valid for `Mask2FormerImageProcessor.__init__` and were ignored: '_max_size'\n",
+      "  return func(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "from transformers import AutoImageProcessor, Mask2FormerForUniversalSegmentation\n",
+    "\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "processor = AutoImageProcessor.from_pretrained(\n",
+    "    \"facebook/mask2former-swin-large-cityscapes-semantic\"\n",
+    ")\n",
+    "model = Mask2FormerForUniversalSegmentation.from_pretrained(\n",
+    "    \"facebook/mask2former-swin-large-cityscapes-semantic\"\n",
+    ")\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f108c2b4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -29,7 +67,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
