--- a/EVA/eva_timm_inference.ipynb
+++ b/EVA/eva_timm_inference.ipynb
@@ -16,15 +16,56 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "136869ac",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c6168d8c",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import timm\n",
+    "import torch\n",
+    "\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = timm.create_model(\n",
+    "    'eva_large_patch14_196.in22k_ft_in22k_in1k', pretrained=True\n",
+    ")\n",
+    "model.eval().to(device);\n",
+    "\n",
+    "# get model specific transforms (normalization, resize)\n",
+    "data_config = timm.data.resolve_model_data_config(model)\n",
+    "transforms = timm.data.create_transform(\n",
+    "    **data_config, is_training=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c50432",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
