--- a/EVA/eva_timm_inference.ipynb
+++ b/EVA/eva_timm_inference.ipynb
@@ -42,8 +42,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0c50432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[12.8416, 10.4233,  5.0744,  4.5568,  4.2718]], device='cuda:0')\n",
+      "tensor([[665, 695, 444, 637, 671]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/bicycle.jpg\"\n",
+    "\n",
+    "img = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    inputs = transforms(img).unsqueeze(0).to(device)\n",
+    "    output = model(inputs)\n",
+    "\n",
+    "top5_logits, top5_class_ids = torch.topk(\n",
+    "    output.softmax(dim=1) * 100, k=5\n",
+    ")\n",
+    "print(top5_logits)\n",
+    "print(top5_class_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b20e823",
    "metadata": {},
    "outputs": [],
    "source": []
