EVA: print class labels

--- a/EVA/eva_timm_inference.ipynb
+++ b/EVA/eva_timm_inference.ipynb
@@ -73,8 +73,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0b20e823",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "\n",
+    "# Download ImageNet-1k labels from torchvision's GitHub\n",
+    "url = \"https://raw.githubusercontent.com/pytorch/hub/master/imagenet_classes.txt\"\n",
+    "filename = \"imagenet_classes.txt\"\n",
+    "\n",
+    "urllib.request.urlretrieve(url, filename)\n",
+    "\n",
+    "# Read them into a list\n",
+    "with open(filename, \"r\") as f:\n",
+    "    imagenet_classes = [line.strip() for line in f.readlines()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c3d2044b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['moped', 'padlock', 'bicycle-built-for-two', 'mailbox', 'mountain bike']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the top 5 predictions\n",
+    "top5_labels = [\n",
+    "    imagenet_classes[class_id] for class_id in top5_class_ids[0]\n",
+    "]\n",
+    "top5_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "859239e4",
    "metadata": {},
    "outputs": [],
    "source": []
