xLAM: linference example 2 : directions

--- a/xLAM/xlam_huggingface_inferemce.ipynb
+++ b/xLAM/xlam_huggingface_inferemce.ipynb
@@ -213,8 +213,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "81410059",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====== model response ======\n",
+      "[{\"name\": \"get_directions\", \"arguments\": {\"location1\": \"San Francisco, CA\", \"location2\": \"Los Angeles, CA\"}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example 2: directions\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"Hi, how are you?\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"Thanks. I am doing well. How can I help you?\"},\n",
+    "    {\"role\": \"user\", \"content\": \"Can you give me directions from San Francisco, CA to Los Angeles, CA?\"},\n",
+    "]\n",
+    "\n",
+    "run(messages, tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9541cf91",
    "metadata": {},
    "outputs": [],
    "source": []
