xLAM: overview screenshot added

--- a/xLAM/xlam_huggingface_inferemce.ipynb
+++ b/xLAM/xlam_huggingface_inferemce.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "**xLAM: A Family of Large Action Models to Empower AI Agent Systems**\n",
     "\n",
-    "* Paper: https://arxiv.org/abs/2409.03215"
+    "* Paper: https://arxiv.org/abs/2409.03215\n",
+    "\n",
+    "![xLAM Overview](../assets/xlam_overview.png)"
    ]
   },
   {
