--- a/WebSSL/webssl_huggingface_inference.ipynb
+++ b/WebSSL/webssl_huggingface_inference.ipynb
@@ -22,8 +22,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "69ea6e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`use_fast` is set to `True` but the image processor class does not have a fast version.  Falling back to the slow version.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import torch\n",
+    "from transformers import AutoImageProcessor, Dinov2Model\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "processor = AutoImageProcessor.from_pretrained(\n",
+    "    \"facebook/webssl-dino1b-full2b-224\",\n",
+    "    use_fast=True\n",
+    ")\n",
+    "# 'eager' and 'sdpa' attn_implementation supported\n",
+    "model = Dinov2Model.from_pretrained(\n",
+    "    \"facebook/webssl-dino1b-full2b-224\"\n",
+    ").eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f23cb342",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -36,8 +66,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.11"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
