--- a/WebSSL/webssl_huggingface_inference.ipynb
+++ b/WebSSL/webssl_huggingface_inference.ipynb
@@ -52,8 +52,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f23cb342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 1536])\n",
+      "torch.Size([1, 256, 1536])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Process an image\n",
+    "image = Image.open('../samples/plants.jpg').convert('RGB')\n",
+    "inputs = processor(images=image, return_tensors=\"pt\")\n",
+    "inputs = inputs.to(device)\n",
+    "\n",
+    "# Forward pass\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "cls_features = outputs.last_hidden_state[:, 0]  # CLS token features\n",
+    "patch_features = outputs.last_hidden_state[:, 1:] # patch-wise token features\n",
+    "\n",
+    "print(cls_features.shape)  # (batch_size, hidden_size)\n",
+    "print(patch_features.shape)  # (batch_size, num_patches, hidden_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f37172a8",
    "metadata": {},
    "outputs": [],
    "source": []
