--- a/VGGT/vggt_inference.ipynb
+++ b/VGGT/vggt_inference.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a2a4eba9",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "213554a8",
    "metadata": {},
    "outputs": [
@@ -78,14 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Images shape: torch.Size([1, 3, 518, 518])\n",
-      "Predictions: dict_keys(['pose_enc', 'depth', 'depth_conf', 'world_points', 'world_points_conf', 'images'])\n",
-      "pose_enc: torch.Size([1, 1, 9])\n",
-      "depth: torch.Size([1, 1, 518, 518, 1])\n",
-      "depth_conf: torch.Size([1, 1, 518, 518])\n",
-      "world_points: torch.Size([1, 1, 518, 518, 3])\n",
-      "world_points_conf: torch.Size([1, 1, 518, 518])\n",
-      "images: torch.Size([1, 1, 3, 518, 518])\n"
+      "Images shape: torch.Size([1, 3, 518, 518])\n"
      ]
     },
     {
@@ -94,6 +87,19 @@
      "text": [
       "/home/pyml/git_vmirly/GenAI-Hub/VGGT/vggt/vggt/models/vggt.py:67: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
       "  with torch.cuda.amp.autocast(enabled=False):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: dict_keys(['pose_enc', 'depth', 'depth_conf', 'world_points', 'world_points_conf', 'images'])\n",
+      "pose_enc: torch.Size([1, 1, 9])\n",
+      "depth: torch.Size([1, 1, 518, 518, 1])\n",
+      "depth_conf: torch.Size([1, 1, 518, 518])\n",
+      "world_points: torch.Size([1, 1, 518, 518, 3])\n",
+      "world_points_conf: torch.Size([1, 1, 518, 518])\n",
+      "images: torch.Size([1, 1, 3, 518, 518])\n"
      ]
     },
     {
@@ -134,6 +140,187 @@
     "ax[1].axis(\"off\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5fadfdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting pose encoding to extrinsic and intrinsic matrices...\n",
+      "Processing model outputs...\n",
+      "Starting viser visualization...\n",
+      "Starting viser server on port 8082\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/git_vmirly/GenAI-Hub/VGGT/vggt/vggt/models/vggt.py:67: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  with torch.cuda.amp.autocast(enabled=False):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">╭──────────────── <span style=\"font-weight: bold\">viser</span> ────────────────╮\n",
+       "│             ╷                         │\n",
+       "│   HTTP      │ http://localhost:8082   │\n",
+       "│   Websocket │ ws://localhost:8082     │\n",
+       "│             ╵                         │\n",
+       "╰───────────────────────────────────────╯\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "╭──────────────── \u001b[1mviser\u001b[0m ────────────────╮\n",
+       "│             ╷                         │\n",
+       "│   HTTP      │ http://localhost:8082   │\n",
+       "│   Websocket │ ws://localhost:8082     │\n",
+       "│             ╵                         │\n",
+       "╰───────────────────────────────────────╯\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 302.55it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting viser server...\n",
+      "Visualization complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">(viser)</span> Connection opened <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> total<span style=\"font-weight: bold\">)</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">45</span> persistent messages\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m(\u001b[0m\u001b[1mviser\u001b[0m\u001b[1m)\u001b[0m Connection opened \u001b[1m(\u001b[0m\u001b[1;36m0\u001b[0m, \u001b[1;36m1\u001b[0m total\u001b[1m)\u001b[0m, \u001b[1;36m45\u001b[0m persistent messages\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">(viser)</span> Connection closed <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span> total<span style=\"font-weight: bold\">)</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m(\u001b[0m\u001b[1mviser\u001b[0m\u001b[1m)\u001b[0m Connection closed \u001b[1m(\u001b[0m\u001b[1;36m0\u001b[0m, \u001b[1;36m0\u001b[0m total\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">(viser)</span> Connection opened <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> total<span style=\"font-weight: bold\">)</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">45</span> persistent messages\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m(\u001b[0m\u001b[1mviser\u001b[0m\u001b[1m)\u001b[0m Connection opened \u001b[1m(\u001b[0m\u001b[1;36m1\u001b[0m, \u001b[1;36m1\u001b[0m total\u001b[1m)\u001b[0m, \u001b[1;36m45\u001b[0m persistent messages\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">(viser)</span> Connection closed <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span> total<span style=\"font-weight: bold\">)</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m(\u001b[0m\u001b[1mviser\u001b[0m\u001b[1m)\u001b[0m Connection closed \u001b[1m(\u001b[0m\u001b[1;36m1\u001b[0m, \u001b[1;36m0\u001b[0m total\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from demo_viser import viser_wrapper\n",
+    "from vggt.utils.pose_enc import pose_encoding_to_extri_intri\n",
+    "\n",
+    "use_point_map = False  # use depth map for 3D reconstruction\n",
+    "background_mode = True\n",
+    "port_number = \"8082\"\n",
+    "conf_threshold = 25.0\n",
+    "mask_sky = False\n",
+    "image_folder = \"output/\"\n",
+    "\n",
+    "image_paths = [\n",
+    "    f\"../samples/multiview/plant_view{i}.jpg\" for i in range(1, 6)\n",
+    "]\n",
+    "images = load_and_preprocess_images(image_paths).to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    with torch.amp.autocast(\"cuda\", dtype=dtype):\n",
+    "        predictions = model(images)\n",
+    "\n",
+    "print(\"Converting pose encoding to extrinsic and intrinsic matrices...\")\n",
+    "extrinsic, intrinsic = pose_encoding_to_extri_intri(predictions[\"pose_enc\"], images.shape[-2:])\n",
+    "predictions[\"extrinsic\"] = extrinsic\n",
+    "predictions[\"intrinsic\"] = intrinsic\n",
+    "\n",
+    "print(\"Processing model outputs...\")\n",
+    "for key in predictions.keys():\n",
+    "    if isinstance(predictions[key], torch.Tensor):\n",
+    "        predictions[key] = predictions[key].cpu().numpy().squeeze(0)  # remove batch dimension and convert to numpy\n",
+    "\n",
+    "\n",
+    "print(\"Starting viser visualization...\")\n",
+    "\n",
+    "viser_wrapper(\n",
+    "    predictions,\n",
+    "    port=port_number,\n",
+    "    init_conf_threshold=conf_threshold,\n",
+    "    use_point_map=use_point_map,\n",
+    "    background_mode=background_mode,\n",
+    "    mask_sky=mask_sky,\n",
+    "    image_folder=image_folder,\n",
+    ")\n",
+    "print(\"Visualization complete\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f907ac54",
+   "metadata": {},
+   "source": [
+    "![3D Visualization with Viser](visualization_3d_viser.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13c5a4e5",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
