VGGT: installation instructions

--- a/VGGT/vggt_inference.ipynb
+++ b/VGGT/vggt_inference.ipynb
@@ -142,6 +142,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4765c17e",
+   "metadata": {},
+   "source": [
+    "### Multiview inference\n",
+    "\n",
+    "* Install viser for 3D vissualization\n",
+    "```bash\n",
+    "pip install -r vggt/requirements_demo.txt\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f5fadfdb",
