QLIP: Inference example

--- a/QLIP/qlip_huggingface_inference.ipynb
+++ b/QLIP/qlip_huggingface_inference.ipynb
@@ -73,9 +73,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ba41a8f",
+   "metadata": {},
+   "source": [
+    "### Inference example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7584d099",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unused or unrecognized kwargs: padding.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model outputs: odict_keys(['logits_per_image', 'logits_per_text', 'text_embeds', 'image_embeds', 'text_model_output', 'vision_model_output', 'reconstructions'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path)\n",
+    "captions = [\"a dog\", \"a cat\", \"a plant\"]\n",
+    "\n",
+    "input_ids = tokenizer(\n",
+    "    captions, return_tensors=\"pt\", padding=True\n",
+    ").input_ids.to(device)\n",
+    "input_pixels = processor(\n",
+    "    images=image, return_tensors=\"pt\", padding=True\n",
+    ").pixel_values.to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(input_ids, input_pixels)\n",
+    "\n",
+    "print(f\"model outputs: {outputs.keys()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "36fceeb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits per image: [[-1.5476025  -0.23974146 11.993626  ]]\n",
+      "logits per text: [[-1.5476025 ]\n",
+      " [-0.23974146]\n",
+      " [11.993626  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"logits per image:\", outputs.logits_per_image.cpu().numpy())\n",
+    "print(\"logits per text:\", outputs.logits_per_text.cpu().numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b9dabb4",
    "metadata": {},
    "outputs": [],
    "source": []
