QLIP: Inference - get probabilities

--- a/QLIP/qlip_huggingface_inference.ipynb
+++ b/QLIP/qlip_huggingface_inference.ipynb
@@ -143,6 +143,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "5c7c53d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model label_probs: tensor([[1.3209e-06, 4.8831e-06, 9.9999e-01]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    #image_features = outputs[\"image_embeds\"]\n",
+    "    image_features = model.get_image_features(input_pixels)\n",
+    "    #text_features = outputs[\"text_embeds\"]\n",
+    "    text_features = model.get_text_features(input_ids)\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "label_probs = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
+    "print(f\"model label_probs: {label_probs}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "8b9dabb4",
    "metadata": {},
