QLIP: inference - image/text features

--- a/QLIP/qlip_huggingface_inference.ipynb
+++ b/QLIP/qlip_huggingface_inference.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7584d099",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "36fceeb8",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "5c7c53d4",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8b9dabb4",
    "metadata": {},
    "outputs": [
@@ -212,9 +212,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fc75d04",
+   "metadata": {},
+   "source": [
+    "## Image-Text matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "52183779",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unused or unrecognized kwargs: padding.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "texts = [\n",
+    "    \"a person\", \"a house\", \"a bicycle\", \"fruits\", \"a plant\"\n",
+    "]\n",
+    "\n",
+    "image_paths = [\n",
+    "    f for f in os.listdir(\"../samples/\")\n",
+    "    if f.endswith('.jpg') and not f.startswith('anchor_')\n",
+    "]\n",
+    "\n",
+    "imgs = [\n",
+    "    Image.open(os.path.join(\"../samples/\", f)).convert(\"RGB\")\n",
+    "    for f in image_paths\n",
+    "]\n",
+    "\n",
+    "input_ids = tokenizer(\n",
+    "    texts, return_tensors=\"pt\", padding=True\n",
+    ").input_ids.to(device)\n",
+    "input_pixels = processor(\n",
+    "    images=imgs, return_tensors=\"pt\", padding=True\n",
+    ").pixel_values.to(device)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52183779",
+   "id": "e71db905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image features shape: torch.Size([8, 512])\n",
+      "text features shape: torch.Size([5, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    image_features = model.get_image_features(input_pixels)\n",
+    "    text_features = model.get_text_features(input_ids)\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "print(\"image features shape:\", image_features.shape)\n",
+    "print(\"text features shape:\", text_features.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd0fc38",
    "metadata": {},
    "outputs": [],
    "source": []
