FaceParsing: load model

--- a/FaceParsing/faceparsing_huggingface_inference.ipynb
+++ b/FaceParsing/faceparsing_huggingface_inference.ipynb
@@ -13,6 +13,42 @@
     "pip install transformers\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "520cc587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from transformers import (\n",
+    "    SegformerImageProcessor,\n",
+    "    SegformerForSemanticSegmentation\n",
+    ")\n",
+    "\n",
+    "device = (\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# load models\n",
+    "image_processor = SegformerImageProcessor.from_pretrained(\n",
+    "    \"jonathandinu/face-parsing\"\n",
+    ")\n",
+    "model = SegformerForSemanticSegmentation.from_pretrained(\n",
+    "    \"jonathandinu/face-parsing\"\n",
+    ")\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44285dc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
