DepthAnything: inference via model classes

--- a/DepthAnything/depthanything_huggingface_inference.ipynb
+++ b/DepthAnything/depthanything_huggingface_inference.ipynb
@@ -80,12 +80,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9468e969",
+   "metadata": {},
+   "source": [
+    "## Inference via model class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f25a5757",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from transformers import AutoImageProcessor, AutoModelForDepthEstimation\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "image_processor = AutoImageProcessor.from_pretrained(\n",
+    "    \"LiheYoung/depth-anything-base-hf\"\n",
+    ")\n",
+    "model = AutoModelForDepthEstimation.from_pretrained(\n",
+    "    \"LiheYoung/depth-anything-base-hf\"\n",
+    ").eval().to(device)"
+   ]
   }
  ],
  "metadata": {
