--- a/AuraSR/aurasr_inference.ipynb
+++ b/AuraSR/aurasr_inference.ipynb
@@ -20,6 +20,37 @@
     "pip install aura-sr\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d0c681fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 6 files: 100%|██████████| 6/6 [00:00<00:00, 88301.14it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "from aura_sr import AuraSR\n",
+    "\n",
+    "\n",
+    "aura_sr = AuraSR.from_pretrained(\"fal/AuraSR-v2\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77e82a45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -29,8 +60,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.11"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
