--- a/AuraSR/aurasr_inference.ipynb
+++ b/AuraSR/aurasr_inference.ipynb
@@ -46,8 +46,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "77e82a45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1068, 1137)\n",
+      "(106, 113)\n",
+      "(424, 452)\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "print(image.size)\n",
+    "\n",
+    "# downscale the image\n",
+    "downscaled_image = image.resize(\n",
+    "    (image.size[0] // 10, image.size[1] // 10), Image.LANCZOS\n",
+    ")\n",
+    "print(downscaled_image.size)\n",
+    "\n",
+    "# inference: upscaling the image\n",
+    "upscaled_image = aura_sr.upscale_4x_overlapped(downscaled_image)\n",
+    "print(upscaled_image.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "496ef43a",
    "metadata": {},
    "outputs": [],
    "source": []
