ImageGPT: load model

--- a/ImageGPT/imagegpt_huggingface_inference.ipynb
+++ b/ImageGPT/imagegpt_huggingface_inference.ipynb
@@ -47,8 +47,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b6fd2449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from transformers import (\n",
+    "    ImageGPTImageProcessor,\n",
+    "    ImageGPTForCausalImageModeling\n",
+    ")\n",
+    "\n",
+    "processor = ImageGPTImageProcessor.from_pretrained(\n",
+    "   \"openai/imagegpt-small\"\n",
+    ")\n",
+    "model = ImageGPTForCausalImageModeling.from_pretrained(\n",
+    "   \"openai/imagegpt-small\"\n",
+    ")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1205263",
    "metadata": {},
    "outputs": [],
    "source": []
